--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -5,7 +5,7 @@
     <title>Add Item</title>
 </head>
 <body>
-<form action="/items/add" method="post">
+<form action="/items/add" method="post" enctype="multipart/form-data" >
     Title <input type="text" name="title"><br>
     Description <textarea name="description"></textarea>
 
@@ -13,7 +13,8 @@
         <option th:each="category :${categories}"
         th:text="${category.name}" th:value="${category.getId}">
         </option>
-    </select>
+    </select><br>
+    <input type="file" name="image">
     <input type="submit" value="creat">
 </form>
 </body>
